@@ -3,17 +3,25 @@ package com.googlecode.gtalksms;
 import android.app.PendingIntent;
 import android.appwidget.AppWidgetManager;
 import android.appwidget.AppWidgetProvider;
+import android.content.ComponentName;
 import android.content.Context;
 import android.content.Intent;
+import android.util.Log;
 import android.view.View;
 import android.widget.RemoteViews;
 
-import com.googlecode.gtalksms.R;
+import com.googlecode.gtalksms.tools.Tools;
 
 public class WidgetProvider extends AppWidgetProvider {
 
     public void onUpdate(Context context, AppWidgetManager appWidgetManager, int[] appWidgetIds) {
-        
+        // The widget needs to be updated - just ask the service to broadcast it's current
+        // status - the actual update happens when we receive that...
+        Intent intent = MainService.newSvcIntent(context, ".GTalkSMS.BROADCAST_STATUS");
+        context.startService(intent);
+    }
+
+    public void doUpdate(Context context, AppWidgetManager appWidgetManager, int[] appWidgetIds, int state) {
         // Create an Intent to launch activity
         Intent intent = new Intent(".WidgetGTalkSMS.ACTION");
         PendingIntent pendingIntent = PendingIntent.getBroadcast(context, 0, intent, PendingIntent.FLAG_UPDATE_CURRENT);
@@ -21,6 +29,27 @@ public class WidgetProvider extends AppWidgetProvider {
         // Get the layout for the AppWidget and attach an on-click listener to the button
         RemoteViews views = new RemoteViews(context.getPackageName(), R.layout.appwidget);
         views.setOnClickPendingIntent(R.id.Button, pendingIntent);
+        
+        // set the icons.
+        switch (state) {
+            case XmppManager.CONNECTED:
+                views.setImageViewResource(R.id.Button, R.drawable.icon_green);
+                break;
+            case XmppManager.CONNECTING:
+                views.setImageViewResource(R.id.Button, R.drawable.icon_orange);
+                break;
+            case XmppManager.DISCONNECTED:
+                views.setImageViewResource(R.id.Button, R.drawable.icon_red);
+                break;
+            case XmppManager.DISCONNECTING:
+                views.setImageViewResource(R.id.Button, R.drawable.icon_orange);
+                break;
+            case XmppManager.WAITING_TO_CONNECT:
+                views.setImageViewResource(R.id.Button, R.drawable.icon_orange);
+                break;
+            default:
+                break;
+         }
         
         // Set FREE label for not donate version
         if (context.getPackageName().endsWith("donate")) {
@@ -31,5 +60,23 @@ public class WidgetProvider extends AppWidgetProvider {
         
         // Tell the AppWidgetManager to perform an update on the current AppWidget
         appWidgetManager.updateAppWidget(appWidgetIds, views);
+    }
+
+    @Override
+    public void onReceive(Context context, Intent intent) {
+        String action = intent.getAction();
+        Log.d(Tools.LOG_TAG, "widget onReceive " + action);
+        if (action.equals(".WidgetGTalkSMS.ACTION")) {
+            Intent svcintent = MainService.newSvcIntent(context, ".GTalkSMS.TOGGLE");
+            context.startService(svcintent);
+        } else if (action.equals("com.googlecode.gtalksms.XMPP_CONNECTION_CHANGED")) {
+            int state = intent.getIntExtra("new_state", 0);
+            // Update all AppWidget with current status
+            AppWidgetManager manager = AppWidgetManager.getInstance(context);
+            int [] appWidgetIds = manager.getAppWidgetIds(new ComponentName(context, WidgetProvider.class));
+            doUpdate(context, manager, appWidgetIds, state);
+        } else {
+            super.onReceive(context, intent);
+        }
     }
 }
